# textclassification

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/textclassification/: __init__.py  __main__.py  stackoverflow.py
tests/: __init__.py  test_example.py
